// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select :props :bordered 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :clearable 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :creatable 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :disabled 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input disabled="disabled" readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :labelInValue 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :loading 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><div class="t-loading--center t-size-s t-loading t-select__right-icon t-select__active-icon"><svg viewBox="0 0 14 14" version="1.1" width="1em" height="1em" xmlns="http://www.w3.org/2000/svg" class="t-loading__gradient t-icon-loading" size="small"><foreignObject x="1" y="1" width="12" height="12"><div class="t-loading__gradient-conic"></div></foreignObject></svg></div></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :multiple 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :placeholder 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="please select" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :remote 1`] = `
<div class="t-select__wrap" remote="true">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :reserveKeyword 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select :props :size 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select-input--empty t-select">
    <div class="t-input t-size-l t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :disabled 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :label 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select Option :props :value 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;

exports[`Select OptionGroup :props :value 1`] = `
<div class="t-select__wrap">
  <div class="t-input__wrap t-select">
    <div class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix">
      <div class="t-input__prefix"></div><input readonly="readonly" autocomplete="" placeholder="请选择" type="text" unselectable="on" class="t-input__inner"><span class="t-input__suffix t-input__suffix-icon"><svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="t-fake-arrow t-select__right-icon"><path d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921" stroke="black" stroke-opacity="0.9" stroke-width="1.3"></path></svg></span>
    </div>
  </div>
</div>
`;
